--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.6",
         "laravel/framework": "^8.54",
         "laravel/helpers": "^1.4",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "league/flysystem-sftp": "~1.0",
         "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-permission": "^5.1"
     },
